# therapy

./: .gitignore  .gitmodules  README.md
python/therapy-api/: .gitignore  AGENTS.md  PROJECT_STATUS.md  pyproject.toml
python/therapy-api/alembic/: env.py
python/therapy-api/alembic/versions/: 47582f79e700_initial_schema.py
python/therapy-api/scripts/: seed_admin.py  seed_specialties.py
python/therapy-api/skills/architecture/: SKILL.md
python/therapy-api/skills/fastapi-server/: SKILL.md
python/therapy-api/skills/skill-creator/: SKILL.md
python/therapy-api/skills/skill-sync/: SKILL.md
python/therapy-api/skills/sqlalchemy-db/: SKILL.md
python/therapy-api/skills/testing/: SKILL.md
python/therapy-api/src/therapy/: config.py  main.py
python/therapy-api/src/therapy/api/: error_handlers.py  router.py
python/therapy-api/src/therapy/api/admin/: admin_appointment_routes.py  admin_blocked_slot_routes.py  admin_patient_routes.py  admin_settings_routes.py  admin_specialty_routes.py
python/therapy-api/src/therapy/api/public/: appointment_routes.py  auth_routes.py  availability_routes.py  specialty_routes.py
python/therapy-api/src/therapy/api/schemas/: admin_appointment_response.py  appointment_response.py  (+14 more)
python/therapy-api/tests/: conftest.py  factories.py
python/therapy-api/tests/unit/appointment/: fake_appointment_repository.py  test_appointment_usecases.py
python/therapy-api/tests/unit/blocked_slot/: fake_blocked_slot_repository.py
python/therapy-api/tests/unit/patient/: fake_patient_repository.py  patient_test_factory.py  test_upsert_patient_usecase.py
python/therapy-api/tests/unit/specialty/: fake_specialty_repository.py  test_create_specialty_usecase.py
(+117 files in other folders)
